testsuite/tests/typing-error-messages/arrow.ml.reference

#           Characters 81-126:
  ......struct
          let f _ _ _ _ x y = x +. y
  end..
Error: Signature mismatch:
       Modules do not match:
         sig val f : ... * 4 -> !{float} -> ... -> !{float} end
       is not included in
         sig val f : ... * 4 -> !{int} -> ... -> !{int} end
       Values do not match:
         val f : ... * 4 -> !{float} -> ... -> !{float}
       is not included in
         val f : ... * 4 -> !{int} -> ... -> !{int}
#           Characters 87-136:
  ......struct
          let f ?xzy:_ _ _ _ x y = x + y
  end..
Error: Signature mismatch:
       Modules do not match:
         sig val f : !{?xzy}:'a -> ... * 5 -> int end
       is not included in
         sig val f : !{?xyz}:int -> ... * 5 -> int end
       Values do not match:
         val f : !{?xzy}:'a -> ... * 5 -> int
       is not included in
         val f : !{?xyz}:int -> ... * 5 -> int
#                             Characters 345-491:
  ......struct
    let f (_:ui) (_:x) (_:saevae) (_:x) (_:luonis) (_:x) (_:iram)
    (_:x) (x:quoque) (_:x) (_:bello) (_:x) (_:dum)
    (_:x) (_:urbem) = ()
  end..
Error: Signature mismatch:
       Modules do not match:
         sig val f : ... -> !{x} -> ... -> !{x} -> ... * 11 -> unit end
       is not included in
         sig val f : ... -> !{superum} -> ... -> !{memorem} -> ... * 11 -> unit end
       Values do not match:
         val f : ... -> !{x} -> ... -> !{x} -> ... * 11 -> unit
       is not included in
         val f : ... -> !{superum} -> ... -> !{memorem} -> ... * 11 -> unit
#                   Characters 106-166:
  ........struct
                  let f ~lbll ?optt () = ()
          end
Error: Signature mismatch:
       Modules do not match:
         sig val f : !{lbll}:'a -> !{?optt}:'b -> ... -> unit end
       is not included in
         sig val f : !{lbl}:unit -> !{?opt}:unit -> ... -> unit end
       Values do not match:
         val f : !{lbll}:'a -> !{?optt}:'b -> ... -> unit
       is not included in
         val f : !{lbl}:unit -> !{?opt}:unit -> ... -> unit
#                 Characters 112-181:
  ........struct
                  let f x y z w t= x + y + z + w + t
          end
Error: Signature mismatch:
       Modules do not match:
         sig val f : !{int} -> ... * 4 -> !{int} end
       is not included in
         sig val f : !{unit} -> ... * 4 -> !{unit} end
       Values do not match:
         val f : !{int} -> ... * 4 -> !{int}
       is not included in
         val f : !{unit} -> ... * 4 -> !{unit}
#                                   Characters 49-50:
  let f: int -> int -> int -> int -> int -> int = 0
                                                  ^
Error: This expression has type !{int} but an expression was expected of type
         !{int -> ... * 4 -> int}
# 
